# PointPillars-OpenCL

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: cl_utils.hpp
include/pointpillars/: anchorgrid.hpp  common.hpp  nms.hpp  pointpillars.hpp  pointpillars_config.hpp  pointpillars_util.hpp  postprocess.hpp  preprocess.hpp  scan.hpp  scatter.hpp
kernels/: anchorgrid.cl  memset.cl  nms.cl  postprocess.cl  preprocess.cl  scan.cl  scatter.cl
src/: cl_utils.cpp
src/pointpillars/: anchorgrid.cpp  nms.cpp  pointpillars.cpp  postprocess.cpp  preprocess.cpp  scan.cpp  scatter.cpp
